fix(play-controls): center-align buttons

--- a/styles/components/_play-controls.scss
+++ b/styles/components/_play-controls.scss
@@ -12,7 +12,7 @@
     
     &__container {
         align-items: center;
-        display: flex;
+        display: inline-flex;
         flex-direction: row;
         justify-content: center;
         gap: 2rem;
