--- a/styles/style.css
+++ b/styles/style.css
@@ -845,7 +845,7 @@ body {
 }
 .play-controls__container {
   align-items: center;
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
   justify-content: center;
   gap: 2rem;
